# wjl12-opengigevision

./: .gitignore  CMakeLists.txt  GenICam.cpp  GenICam.h  GigEVision.cpp  Gvcp.h  Gvsp.cpp  Gvsp.h  Main.cpp  gige_protocol.txt
src/: GenICam.h  GigEVision.h  Gvcp.cpp  Gvcp.h  Gvsp.h
